# smart-clock

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs  systemdiagram.puml
.cargo/: config.toml
.github/workflows/: rust.yml
ansible/: main.yml
ansible/playbooks/: RTL8811CU.yml  ansible.yml  avahi.yml  i2c.yml  raspap.yml  smart-clock.yml
ansible/playbooks/raspap/: config.php  defaults.json  raspap.yml
dietpi/: README.md  dietpi.txt
src/: main.rs  matrix.rs  mock_matrix.rs  rpi_matrix.rs  state.rs
src/inputs/: bh1750.rs  joy_featherwing.rs  mod.rs
src/states/: mod.rs  region_select.rs  time.rs
